# inferenceport-ai

./: .bazelrc  .editorconfig  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .readthedocs.yml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  add-license.js  clean.ps1  eslint.config.js  global.d.ts  main.js  main.ts  package-lock.json  package.json  preload.cts  preload.ts  test.http  third_party_licenses  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json
src/: BUILD.bazel  build.config.js  global.d.ts  main.ts  package-lock.json  package.json  preload.cts  tsconfig.json
src/lib/: Cargo.toml
src/lib/src/: html_renderer.rs  lib.rs  markdown.rs
src/node-apis/: auth.d.ts  auth.d.ts.map  auth.js  auth.js.map  auth.ts  chatStream.ts  ollama.d.ts  ollama.d.ts.map  ollama.js  ollama.js.map  ollama.ts  spaces.d.ts  spaces.d.ts.map  spaces.js  spaces.js.map  spaces.ts  startup.ts  storageSync.ts  test.js  utils.d.ts  utils.d.ts.map  utils.js  utils.js.map  utils.ts  utils.txt
src/node-apis/assets/: tools.json
src/node-apis/helper/: chatStream.ts  createModel.ts  customTools.ts  ecdhAesSession.ts  ipcBridge.ts  lightningClient.ts  log.ts  ollamaFSops.ts  proxy52458Client.ts  server.d.ts  server.d.ts.map  server.js  server.js.map  server.ts  sysinfo.ts  tools.ts  toolsCache.ts  webUiServer.ts
src/node-apis/types/: chat.types.d.ts  index.types.d.ts  spaces.types.d.ts  tools.d.ts  tools.types.d.ts
src/public/: Components.d.ts  Components.d.ts.map  Components.js  Components.js.map  Components.ts  auth.html  boot.html  disengage.html  index.html  installed.html  marketplace.html  organizations.html  settings.html  sw.js  welcome.html
src/public/components/: ChatPanel.d.ts  ChatPanel.d.ts.map  ChatPanel.js  ChatPanel.js.map  ChatPanel.ts  Navbar.d.ts  Navbar.d.ts.map  Navbar.js  Navbar.js.map  Navbar.ts  input.ts
src/public/help/: 1.html  advanced.html  help.css  index.html  ollama.html  privacy.html  sessions.html  spaces.html  troubleshoot.html  websites.html
src/public/marketplace/: ollama.html  spaces.html  website.html
src/public/renderer/: chat.html  snip-chat.html  snip.html  spaces.html  studio.html
src/public/scripts/: authrender.d.ts  authrender.js  authrender.js.map  authrender.ts  installed.d.ts  installed.d.ts.map  installed.js  installed.js.map  installed.ts  marketplace.ts  (+6 more)
src/scripts/: bundle-ollama.js  bundle-ollama.ts  clean.js
(+352 files in other folders)
