module(
    name = "inferenceportal",
    version = "0.1.0",
)

bazel_dep(name = "aspect_rules_js", version = "2.9.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.1")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
)
npm.npm_translate_lock(
    name = "npm",
    lock_file = "//:package-lock.json",
    package_jsons = ["//:package.json"],
)
use_repo(
    npm,
    "npm",
    "npm_typescript",
)
