module(
    name = "inferenceportal",
    version = "0.1.0",
)

bazel_dep(name = "aspect_rules_js", version = "2.9.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
)

npm.npm_translate_lock(
    name = "npm",
    npm_package_lock = "//:package-lock.json",
)

use_repo(
    npm,
    "npm",
)

rules_ts_ext.deps(
    ts_version_from = "//src:package.json",
)

use_repo(rules_ts_ext, "npm_typescript")