load("//defs:tsgo.bzl", "tsgo_project")

tsgo_project(
    name = "ts_sources",
    srcs = glob(["**/*.ts", "**/*.cts", "**/*.mts"]),
    tsconfig = "tsconfig.json",
)

genrule(
    name = "desktop_app",
    srcs = [":ts_sources"],
    outs = ["desktop_app.out"],
    cmd = "C:\\Users\\rihaan.meher\\AppData\\Local\nvm\\v23.3.0\\node.exe $(location :ts_sources)/main.js > $@",
)
